Add support for posix_madvise to Java 21 MMapDirectory (backport)